unpackaged/main/default/objects/project_cloud__Financial_Benefit__c/project_cloud__Financial_Benefit__c.object-meta.xml
<CustomObject>
    <label>Financial Benefit</label>
    <nameField>
        <displayFormat>FB-{00000000}</displayFormat>
        <label>Financial Benefit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Benefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>