unpackaged/main/default/objects/project_cloud__Financial_Benefit__c/fields/project_cloud__Amount__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Amount__c</fullName>
    <inlineHelpText>This field will show the total amount of the Financial Benefit.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>