unpackaged/main/default/objects/project_cloud__Financial_Benefit__c/fields/project_cloud__Date__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Date__c</fullName>
    <inlineHelpText>This field will define the date of the Financial Benefit.</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>