unpackaged/main/default/objects/project_cloud__Financial_Benefit__c/fields/project_cloud__Description__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Description__c</fullName>
    <inlineHelpText>This field will allow users to add a description about what the Financial Benefit is about.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>