unpackaged/main/default/objects/project_cloud__Financial_Benefit__c/fields/project_cloud__Project__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will show what Project the Financial Benefit is related too.</inlineHelpText>
    <label>Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Financial Benefits</relationshipLabel>
    <relationshipName>Financial_Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>