unpackaged/main/default/objects/project_cloud__Financial_Benefit__c/fields/project_cloud__Type__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Type__c</fullName>
    <inlineHelpText>This field will allow users to specify if the Financial Benefit record is Planned or Realized.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Realized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>